View ratings now works: 	- Moved call to $.articleFeedbackv5.buckets[5].loadAggregateRatings() from the 	  form-building stage (which would be called once, immediately upon page 	  load) to the toggle event itself, with a new property 	  $.articleFeedbackv5.buckets[5].loadAggregate to keep track of whether it 	  needs to be loaded (once on toggle to view, and again only if the user had 	  submitted the form between toggles) 	- Changed the API call to a custom one, rather than using afsubaction to 	  switch between the two uses (new class ApiViewRatingsArticleFeedbackv5) 	- Updated the API call so that it sends rating rollup data already in the 	  correct format and removed the data munging from the success callback 	- Removed ratings view code from ApiQueryArticleFeedbackv5 and cleaned it 	  up to follow coding standards
Temporary fix for the error overlay covering the whole article:
	- New method $.articleFeedbackv5.buckets[5].markShowstopperError()
	- Updated loadAggregates to use it, although eventually we may want to
	  downgrade to a non-showstopper sort of error (after all, viewing ratings
	  isn't critical)

Renamed some css class prefixes I missed last time

--- a/modules/ext.articleFeedback/ext.articleFeedback.css
+++ b/modules/ext.articleFeedback/ext.articleFeedback.css
@@ -1,16 +1,16 @@
 /*
  * Styles for Article Feedback Extension
  */
-#articleFeedback-dialog {
+#articleFeedbackv5-dialog {
 	padding: 2em;
 	padding-top: 1em;
 }
 
-.articleFeedback-survey-disclaimer {
+.articleFeedbackv5-survey-disclaimer {
 	font-weight: normal; /* Override bold */
 	font-style: italic;
 }
 
-.articleFeedback-survey-disclaimer a {
+.articleFeedbackv5-survey-disclaimer a {
 	color: #0645AD; /* Override blackish color set by JUI */
 }
